extended api documentation
