# src/handlers/kpi.rs
@@ -22,7 +22,6 @@ use sqlx::{Pool, Postgres};
 use std::string::String;
 
 /*
-
 */
 pub async fn get_self_consumption(
     Query(timestamp_filter): Query<TimestampFilter>,
@@ -68,6 +67,111 @@ pub async fn get_self_consumption(
         value: self_consumption,
         name: String::from("self_consumption"),
         unit: None,
+        from_timestamp,
+        to_timestamp,
+    };
+    Ok(Json(kpi_result))
+}
+
+/*
+return consumption for each carrier as timeseries in kwh
+*/
+pub async fn get_consumption(
+    State(pool): State<Pool<Postgres>>,
+    Query(timestamp_filter): Query<TimestampFilter>,
+    Query(resampling): Query<Resampling>,
+) -> Result<Json<Vec<ConsumptionByCarrier>>> {
+    let offset = resampling.hours_per_interval()?;
+    let pg_resampling_interval = resampling.map_interval()?;
+    let from_timestamp = timestamp_filter.from.unwrap();
+    let to_timestamp = timestamp_filter.to.unwrap();
+    let grid_consumption_records: Vec<Consumption> = sqlx::query_file_as!(
+        Consumption,
+        "src/sql/grid_consumption.sql",
+        pg_resampling_interval,
+        from_timestamp,
+        to_timestamp,
+    )
+    .fetch_all(&pool)
+    .await?;
+
+    let local_consumption_records: Vec<Consumption> = sqlx::query_file_as!(
+        Consumption,
+        "src/sql/local_consumption.sql",
+        pg_resampling_interval,
+        from_timestamp,
+        to_timestamp
+    )
+    .fetch_all(&pool)
+    .await?;
+
+    let mut kpi_results: Vec<ConsumptionByCarrier> = vec![];
+    // TODO: not very pretty, duplicate iteration is a code smell imo
+    for consumption in grid_consumption_records {
+        let kpi_value = consumption.carrier_proportion.unwrap_or(1.0)
+            * consumption.bucket_consumption.unwrap_or(0.0)
+            * offset;
+        let kpi_result = ConsumptionByCarrier {
+            bucket: consumption.bucket.unwrap(),
+            value: kpi_value,
+            carrier_name: consumption.carrier_name,
+            unit: String::from("kwh"),
+            local: false,
+        };
+        kpi_results.push(kpi_result);
+    }
+    for consumption in local_consumption_records {
+        let kpi_value = consumption.carrier_proportion.unwrap_or(1.0)
+            * consumption.bucket_consumption.unwrap_or(0.0)
+            * offset;
+        let kpi_result = ConsumptionByCarrier {
+            bucket: consumption.bucket.unwrap(),
+            value: kpi_value,
+            carrier_name: consumption.carrier_name,
+            unit: String::from("kwh"),
+            local: true,
+        };
+        kpi_results.push(kpi_result);
+    }
+    Ok(Json(kpi_results))
+}
+
+pub async fn get_total_consumption(
+    Query(timestamp_filter): Query<TimestampFilter>,
+    State(pool): State<Pool<Postgres>>,
+    Query(resampling): Query<Resampling>,
+) -> Result<Json<KpiResult>, ApiError> {
+    let from_timestamp = timestamp_filter.from.unwrap();
+    let to_timestamp = timestamp_filter.to.unwrap();
+    let pg_resampling_interval = resampling.map_interval()?;
+
+    let consumption_record = sqlx::query!(
+        r"
+            select sum(subquery.mean_value) as value from 
+                (select
+                    time_bucket($3::interval, ts.series_timestamp) as bucket,
+                    avg(ts.series_value) as mean_value 
+                from ts
+                    join meta m on ts.meta_id = m.id
+                where 
+                m.identifier = 'total_load' and
+                ts.series_timestamp >= $1 and ts.series_timestamp <= $2
+                group by bucket
+                order by bucket) subquery
+        ",
+        from_timestamp,
+        to_timestamp,
+        pg_resampling_interval,
+    )
+    .fetch_one(&pool)
+    .await?;
+
+    let consumption: f64 =
+        consumption_record.value.unwrap_or(0.0) * resampling.hours_per_interval()?;
+    let kpi_result = KpiResult {
+        value: consumption,
+        name: String::from("total_consumption"),
+        unit: Some(String::from("kwh")),
         from_timestamp,
         to_timestamp,
     };
@@ -264,109 +368,4 @@ pub async fn get_scope_two_emissions(
         kpi_results.push(kpi_result);
     }
     Ok(Json(kpi_results))
-}
-
-/*
-return consumption for each carrier as timeseries in kwh
-*/
-pub async fn get_consumption(
-    State(pool): State<Pool<Postgres>>,
-    Query(timestamp_filter): Query<TimestampFilter>,
-    Query(resampling): Query<Resampling>,
-) -> Result<Json<Vec<ConsumptionByCarrier>>> {
-    let offset = resampling.hours_per_interval()?;
-    let pg_resampling_interval = resampling.map_interval()?;
-    let from_timestamp = timestamp_filter.from.unwrap();
-    let to_timestamp = timestamp_filter.to.unwrap();
-    let grid_consumption_records: Vec<Consumption> = sqlx::query_file_as!(
-        Consumption,
-        "src/sql/grid_consumption.sql",
-        pg_resampling_interval,
-        from_timestamp,
-        to_timestamp,
-    )
-    .fetch_all(&pool)
-    .await?;
-
-    let local_consumption_records: Vec<Consumption> = sqlx::query_file_as!(
-        Consumption,
-        "src/sql/local_consumption.sql",
-        pg_resampling_interval,
-        from_timestamp,
-        to_timestamp
-    )
-    .fetch_all(&pool)
-    .await?;
-
-    let mut kpi_results: Vec<ConsumptionByCarrier> = vec![];
-    // TODO: not very pretty, duplicate iteration is a code smell imo
-    for consumption in grid_consumption_records {
-        let kpi_value = consumption.carrier_proportion.unwrap_or(1.0)
-            * consumption.bucket_consumption.unwrap_or(0.0)
-            * offset;
-        let kpi_result = ConsumptionByCarrier {
-            bucket: consumption.bucket.unwrap(),
-            value: kpi_value,
-            carrier_name: consumption.carrier_name,
-            unit: String::from("kwh"),
-            local: false,
-        };
-        kpi_results.push(kpi_result);
-    }
-    for consumption in local_consumption_records {
-        let kpi_value = consumption.carrier_proportion.unwrap_or(1.0)
-            * consumption.bucket_consumption.unwrap_or(0.0)
-            * offset;
-        let kpi_result = ConsumptionByCarrier {
-            bucket: consumption.bucket.unwrap(),
-            value: kpi_value,
-            carrier_name: consumption.carrier_name,
-            unit: String::from("kwh"),
-            local: true,
-        };
-        kpi_results.push(kpi_result);
-    }
-    Ok(Json(kpi_results))
-}
-
-pub async fn get_total_consumption(
-    Query(timestamp_filter): Query<TimestampFilter>,
-    State(pool): State<Pool<Postgres>>,
-    Query(resampling): Query<Resampling>,
-) -> Result<Json<KpiResult>, ApiError> {
-    let from_timestamp = timestamp_filter.from.unwrap();
-    let to_timestamp = timestamp_filter.to.unwrap();
-    let pg_resampling_interval = resampling.map_interval()?;
-
-    let consumption_record = sqlx::query!(
-        r"
-            select sum(subquery.mean_value) as value from 
-                (select
-                    time_bucket($3::interval, ts.series_timestamp) as bucket,
-                    avg(ts.series_value) as mean_value 
-                from ts
-                    join meta m on ts.meta_id = m.id
-                where 
-                m.identifier = 'total_load' and
-                ts.series_timestamp >= $1 and ts.series_timestamp <= $2
-                group by bucket
-                order by bucket) subquery
-        ",
-        from_timestamp,
-        to_timestamp,
-        pg_resampling_interval,
-    )
-    .fetch_one(&pool)
-    .await?;
-
-    let consumption: f64 =
-        consumption_record.value.unwrap_or(0.0) * resampling.hours_per_interval()?;
-    let kpi_result = KpiResult {
-        value: consumption,
-        name: String::from("total_consumption"),
-        unit: Some(String::from("kwh")),
-        from_timestamp,
-        to_timestamp,
-    };
-    Ok(Json(kpi_result))
 }
